--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "log-timestamp": "^0.3.0",
     "node-notifier": "^5.4.1",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7"
   }
 }
