Extended the configurations. Implemented base64 en/decoding. Finished the email sending and started implementing the node-scheduler.

--- a/config/config.json
+++ b/config/config.json
@@ -17,5 +17,10 @@
     "ID": 45,
     "title": "Juhu",
     "message": "Even more Juhu"
+  },
+  "Email": {
+    "service": "outlook",
+    "from": "webservice1993@hotmail.com",
+    "to": "stefan.leopold@hotmail.com"
   }
 }
