Changed the Logger and enhanced it with log4js. Finished the reminder, but it still blocks and should rather run in the background.

--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,10 @@
   "DataDir": "Data",
   "GitCheckoutDestination": "GitCheckout",
   "DataCopyTarget": "src\\assets\\data",
-  "LogFile": "C:\\Users\\sso2bj\\Documents\\Test\\service.log",
-
+  "Logging": {
+    "file": "C:\\Users\\sso2bj\\Documents\\service.log",
+    "level": "info"
+  },
   "Git": {
     "projectName": "project",
     "source": "master",
