--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "log-timestamp": "^0.3.0",
+    "log4js": "^5.0.0",
     "node-notifier": "^5.4.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
