Added email distribution on errors. Removed unneeded git function. Extended configuration.

--- a/config/config.json
+++ b/config/config.json
@@ -23,6 +23,7 @@
   "Email": {
     "service": "outlook",
     "from": "webservice1993@hotmail.com",
-    "to": "stefan.leopold@hotmail.com"
+    "to": "stefan.leopold@hotmail.com",
+    "onErrors": true
   }
 }
