--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "log4js": "^5.0.0",
     "node-notifier": "^5.4.1",
     "node-schedule": "^1.3.2",
+    "node-xlsx": "^0.15.0",
     "nodemailer": "^6.3.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0"
   }
 }
