--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "log-timestamp": "^0.3.0",
     "log4js": "^5.0.0",
+    "mailgun-js": "^0.22.0",
     "node-notifier": "^5.4.1",
     "node-schedule": "^1.3.2",
     "node-xlsx": "^0.15.0",
-    "nodemailer": "^6.3.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
