--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Stefan Sonntag",
   "license": "ISC",
   "dependencies": {
+    "cli-progress": "^3.3.1",
     "log-timestamp": "^0.3.0",
     "log4js": "^5.0.0",
     "mailgun-js": "^0.22.0",
