Fixed problem in CSV creation for strings containing commas. Reverted line endings to Linux format.

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
-  "WorkingDir": "/home/stefan/temp",
+  "WorkingDir": "/home/stefan/Data/GitSyncTest",
   "DataSource": "Data",
   "GitCheckoutDestination": "GitCheckout",
   "DataCopyTarget": "src/assets/data",
   "Logging": {
-    "file": "/home/stefan/temp/service.log",
+    "file": "/home/stefan/Data/GitSyncTest/service.log",
     "level": "debug"
   },
   "Git": {
